[gd_scene load_steps=7 format=3 uid="uid://conukfy3gl6bg"]

[ext_resource type="Script" uid="uid://ci3ofcyd8m4ie" path="res://Scenes/GameSequence/pause.gd" id="1_tpp1l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xel1c"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpp1l"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ji6u"]
bg_color = Color(0.6378432, 0.6378432, 0.63784313, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5eqk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8cf6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tpp1l")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.0
offset_top = -2.0
offset_right = 257.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.37254903)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.5
offset_right = 61.5
offset_bottom = 57.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 41
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = 82.0
offset_right = -86.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="ContinueButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_xel1c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tpp1l")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ji6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j5eqk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8cf6")
text = "CONTINUE"

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_xel1c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tpp1l")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ji6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j5eqk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8cf6")
text = "RESTART"

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_xel1c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tpp1l")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ji6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j5eqk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8cf6")
text = "EXIT"

[connection signal="button_down" from="Control/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
